0.12 03nov2016
* added option to enumerate supported sensors
* added support for OS WGR800 and PCR800 sensors
* added support for lacrosse rainfall messages
* provide feedback when no permission to read usb device
* added support for Calibeur RF104 sensors

0.11 31oct2016
* added parser for acurite 986 packets (thanks to andy)
* removed vestigial code from data_type
* use glob matching for sensor identifier tuple components

0.9 29sep2016
* added generic support for rain_total and other cumulative measures
* for acurite 5n1, get rain from type 31 message instead of reset message

0.8 25sep2016
* added support for OSTHGR122NPacket (thanks to marco tibaldi)

0.7 12sep2016
* improved process management
* report errors better during startup
* use new mapping syntax output=input
* added comments about how to configure
* options to log unparsed packets
* options to log unmapped data from parsed packets

0.1 30mar2016
* initial release